--- a/assets/style.css
+++ b/assets/style.css
@@ -17,7 +17,11 @@ header {
 }
 
 header h1 {
-
+    font-weight: bold;
+    font-size: 36px;
+    color: #87e48f;
+    margin: 0;
+    display: inline;
 }
 
 header nav {
@@ -33,4 +37,9 @@ header nav ul li {
     margin: 0 30px;
     font-weight: lighter;
     font-size: 22px;
+}
+
+header a {
+    text-decoration: none;
+    color: #87e48f
 }
