--- a/assets/style.css
+++ b/assets/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    color: #05600d;
+    background-color: #65C6CE;
     font-family: Helvetica, Arial, sans-serif;
 }
 
@@ -21,12 +21,17 @@ header {
     position: sticky;
     top: 0;
     background-position: 80%;
+    background-image: url("./images/beachy.jpg");
+    background-size: cover;
+    background-position: 80%;
+    background-attachment: fixed;
+    z-index: 9999;
 }
 
 header h1 {
     font-weight: bold;
     font-size: 36px;
-    color: #87e48f;
+    color: #fff;
     margin: 0;
     display: inline;
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
@@ -34,7 +39,7 @@ header h1 {
 
 header a {
     text-decoration: none;
-    color: #87e48f
+    color: #fff;
 }
 
 header nav {
@@ -54,6 +59,7 @@ header nav ul li a {
     padding: 10px 15px;
     font-weight: bolder;
     font-size: 1.55vw;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 header nav ul li a:hover {
@@ -65,7 +71,7 @@ header nav ul li a:hover {
 
 /* Hero Styling */
 .hero {
-    background-image: url("./images/floral.jpg");
+    background-image: url("./images/beachy.jpg");
     background-size: cover;
     background-position: 80%;
     background-attachment: fixed;
@@ -78,19 +84,11 @@ header nav ul li a:hover {
 
 .hero-cta {
     width: 100%;
-    text-align: right;
+    text-align: center;
     margin: 3.5%;
     color: #fff;
     font-size: 18px;
     line-height: 1.2;
-    float: left;
-}
-
-.hero-cta h2 {
-    font-style: bold;
-    font-size: 55px;
-    color: #fff;
-    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     float: left;
 }
 
@@ -106,49 +104,72 @@ header nav ul li a:hover {
 .about-me {
     width: 100%;
     text-align: left;
-    background: #05600d;
+    background: #65C6CE;
     display: flex;
+    margin: auto;
+    border-radius: 15px;
+    border-color: #CCDC27;
+    border-style: solid;
+    padding: 10px;
 }
 
 .about-me h2 {
     font-style: bold;
     font-size: 35px;
     color: #fff;
+    text-align: center;
+    margin: auto;
+    padding: 5px;
 }
 
 .my-bio {
     display: flex;
 }
 
-.bio img {
-    flex: 1 12%;
-    margin-right: 20px;
-}
-
 .bio-img img {
-    width: 100%;
-    min-height: 300px;
+    width: 50%;
+    min-height: 200px;
+    border-radius: 15px;
+    padding: 0;
+    border-style: solid;
+    border-color: #CCDC27;
 }
 
 .my-bio p {
     color: #fff;
+    text-align: center;
+    margin: auto;
 }
 
 
+/*PROJECTS SECTION STYLING*/
+
+.projects-grid-container {
+    display: grid;
+    background-color: #CCDC27;
+    width: 80%;
+    grid-template-columns: 1fr repeat(2, 4fr);
+    grid-template-rows: 1fr repeat(2, 4fr);
+    color: #fff;
+}
 
 /* FOOTER STYLING */
 
 footer {
-    background: #05600d;
+    background-image: url("./images/beachy.jpg");
     width: 100%; 
     padding: 15px 10px;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    background-size: cover;
 }
 
 footer h2 {
-    color: #87e48f;
+    color: #fff;
     font-size: 20px;
     margin: 0;
+    text-align: center;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    margin: auto;
 }
