--- a/assets/style.css
+++ b/assets/style.css
@@ -144,14 +144,104 @@ header nav ul li a:hover {
 
 /*PROJECTS SECTION STYLING*/
 
-.projects-grid-container {
-    display: grid;
-    background-color: #CCDC27;
-    width: 80%;
-    grid-template-columns: 1fr repeat(2, 4fr);
-    grid-template-rows: 1fr repeat(2, 4fr);
+.section-title {
+    font-size: 48px;
     color: #fff;
+    border-right: 3px solid;
+    padding-right: 20px;
+    text-align: left;
+    margin: 0 auto 35px auto;
+    width: 50%;
 }
+
+.primary-border {
+    border-color: #CCDC27;
+}
+
+.projects {
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.project {
+    margin: 20px;
+    background: #CCDC27;
+    color: #fff;
+    flex: 1;
+    border-radius: 15px;
+}
+
+.project-1 {
+    background-image: url("./images/run-buddy.jpg");    
+}
+
+.project-2 {
+    background-image: url("./images/horeison.PNG");
+}
+
+.project-3 {
+    background-image: url("./images/plant-guide.PNG");
+}
+
+.project-4 {
+    background-image: url("./images/whatscat.JPG");
+}
+
+.project-5 {
+    background-image: url("./images/purple.jpg");
+}
+
+.project-6 {
+    background-image: url("./images/flavors.jpg");
+}
+
+.project-img {
+    width: 100%;
+    min-height: 300px;
+    background-size: cover;
+    display: flex;
+    padding: 15px;
+    align-items: flex-end;
+    position: relative;
+}
+
+.project-img::after {
+    content: "";
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(rgba(101, 198, 206, 0.4), rgba(204, 220, 39, 1));
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    transition: 1;
+}
+
+.project-img:hover::after {
+    opacity: 1;
+}
+
+.project-img h3 {
+    position: relative;
+    z-index: 9996;
+    font-size: 28px;
+    margin-bottom: 5px;
+}
+
+.project-description {
+    padding: 25px;
+    line-height: 1.3;
+}
+
+.project-description {
+    font-size: 17px;
+}
+
+
+/*Contact Info Section*/
 
 /* FOOTER STYLING */
 
@@ -172,4 +262,17 @@ footer h2 {
     text-align: center;
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     margin: auto;
+}
+
+/*MEDIA QUERY FOR SMALLER SCREENS */
+@media screen and (max-width: 980px) {
+
+}
+
+@media screen and (max-width: 768px) {
+
+}
+
+@media screen and (max-width: 575px) {
+
 }
