--- a/assets/style.css
+++ b/assets/style.css
@@ -13,7 +13,6 @@ body {
 
 header {
     padding: 20px 35px;
-    background-color: #05600d;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -63,7 +62,7 @@ header nav ul li a {
 }
 
 header nav ul li a:hover {
-    background: #87e48f;
+    background: #CCDC27;
     color: #05600d;
     border-radius: 15px;
     text-shadow: none;
@@ -106,21 +105,11 @@ header nav ul li a:hover {
     text-align: left;
     background: #65C6CE;
     display: flex;
-    margin: auto;
-    border-radius: 15px;
-    border-color: #CCDC27;
-    border-style: solid;
+    margin: 10px;
     padding: 10px;
 }
 
-.about-me h2 {
-    font-style: bold;
-    font-size: 35px;
-    color: #fff;
-    text-align: center;
-    margin: auto;
-    padding: 5px;
-}
+
 
 .my-bio {
     display: flex;
@@ -133,49 +122,81 @@ header nav ul li a:hover {
     padding: 0;
     border-style: solid;
     border-color: #CCDC27;
+    margin: 10px;
 }
 
 .my-bio p {
     color: #fff;
     text-align: center;
     margin: auto;
+    border: solid;
+    border-color: #CCDC27;
+    border-radius: 15px;
+    font-size: 35px;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 
 /*PROJECTS SECTION STYLING*/
 
 .section-title {
-    font-size: 48px;
+    font-style: bold;
+    font-size: 35px;
     color: #fff;
-    border-right: 3px solid;
-    padding-right: 20px;
-    text-align: left;
-    margin: 0 auto 35px auto;
-    width: 50%;
+    text-align: center;
+    padding: 0 20px 0 0;
+    width: 150px;
+    display: block;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
+.title-container{
+    display: block;
+    float: left;
+    margin: 5px;
+}
 .primary-border {
     border-color: #CCDC27;
+    border-right: 3px solid;
+    text-align: right;
 }
 
-.projects {
-    width: 100%;
-    margin: 0 auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+.section-title, .primary-border h2 {
+    display: block;
+    margin-block-start: 0.83em;
+    margin-block-end: 0.83em;
+    margin-inline-start: 0;
+    margin-inline-end: 0;
+    font-weight: bold;
+}
+
+.projects-grid {
+    display: grid;
+    padding: 20px;
+    
+    grid-template-columns: repeat(3, minmax(200px, 1fr));
+    grid-template-rows: repeat(3, minmax(100px, 1fr));
+    margin: 0 0 0 3%;
 }
 
 .project {
-    margin: 20px;
-    background: #CCDC27;
-    color: #fff;
-    flex: 1;
-    border-radius: 15px;
+   display: flex;
+   border: solid;
+   border-color: #CCDC27;
+   justify-content: center;
+   align-items: center;
+}
+
+.project:first-child {
+    grid-column: auto/span 2;
+    grid-row: auto/span 2;
+    width: 100%;
+    height: 100%;
 }
 
 .project-1 {
-    background-image: url("./images/run-buddy.jpg");    
+    background-image: url("./images/run-buddy.jpg");
+    height: 100%;    
 }
 
 .project-2 {
@@ -194,9 +215,6 @@ header nav ul li a:hover {
     background-image: url("./images/purple.jpg");
 }
 
-.project-6 {
-    background-image: url("./images/flavors.jpg");
-}
 
 .project-img {
     width: 100%;
@@ -229,6 +247,8 @@ header nav ul li a:hover {
     z-index: 9996;
     font-size: 28px;
     margin-bottom: 5px;
+    color: #fff;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .project-description {
@@ -236,13 +256,37 @@ header nav ul li a:hover {
     line-height: 1.3;
 }
 
-.project-description {
-    font-size: 17px;
+.project-description p {
+    font-size: 25px;
+    color: #fff;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 
 /*Contact Info Section*/
+#contact-me {
+    padding: 60px;
+    display: inline-flex;
+}
 
+.contact ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    list-style: none;
+    float: right;
+    position: relative;
+    left: 200px;
+    top: 50px;
+}
+
+.contact ul li a {
+    padding: 10px 15px;
+    font-weight: bolder;
+    font-size: 30px;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    color: #fff;
+}
 /* FOOTER STYLING */
 
 footer {
