--- a/assets/style.css
+++ b/assets/style.css
@@ -113,6 +113,8 @@ header nav ul li a:hover {
 
 .my-bio {
     display: flex;
+    padding: 10px;
+    margin: 10px;;
 }
 
 .bio-img img {
@@ -134,6 +136,7 @@ header nav ul li a:hover {
     border-radius: 15px;
     font-size: 35px;
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    padding: 10px;
 }
 
 
@@ -310,7 +313,9 @@ footer h2 {
 
 /*MEDIA QUERY FOR SMALLER SCREENS */
 @media screen and (max-width: 980px) {
-
+    .projects-grid {
+        grid-template-columns: 1fr 1fr;
+    }
 }
 
 @media screen and (max-width: 768px) {
