added covid peeper

--- a/assets/style.css
+++ b/assets/style.css
@@ -211,7 +211,7 @@ header nav ul li a:hover {
 }
 
 .project-4 {
-    background-image: url("./images/whatscat.jpg");
+    background-image: url("./images/covid-peeper.png");
 }
 
 .project-5 {
